# sudoku-solver-in-haskell

./: .travis.yml  Board.hs  README  Sudoku.cabal  Sudoku.hs
Board/: Parse.hs  Pretty.hs
test/: doctests.hs
